Fix gallery overflow issues.

--- a/src/global-styles.css
+++ b/src/global-styles.css
@@ -41,7 +41,7 @@ body {
   height: 100%;
   scroll-behavior: smooth;
   /* overflow-x: hidden; */
-  overflow-x: clip;
+  /* overflow-x: clip; */
 }
 
 /* Chrome, Edge, Opera */
@@ -255,5 +255,4 @@ body {
   font-size: 0.875rem;
   color: #6b7280;
 }
-
 
